--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -15,8 +15,17 @@
         <!--[if lt IE 7]>x
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
-
-        
+        <div class="container">
+            <h1>MUSIC SENTIMENT REVIEW</h1>
+            <p>
+                <input type="text" id="main_search" placeholder="Search artist, album or single">
+            </p>
+        </div>
+        <div class="container">
+            <p>
+                You write the review, we assign a score based on the sentiment of the review.
+            </p>
+        </div>
         <script src="" async defer></script>
         <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
