Added "Publish Review" button

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -35,11 +35,12 @@
                 <input type="text" id="artist_input">
             </p>
             <p>
-                <label for="review_textarea">Review:</label>
+                <label for="review_textarea">Review: </label>
                 <textarea id="review_textarea" rows="20"></textarea>
             </p>
             <p>
-                <input type="button" id="get_score_button" class="btn" value="Get Score">
+                <button type="submit">Get Score</button>
+                <button type="submit">Publish Review</button>
             </p>
         </div>
         <script src="" async defer></script>
