--- a/app/templates/review.html
+++ b/app/templates/review.html
@@ -22,32 +22,11 @@
             </p>
         </div>
         <div class="container">
-            <p>
-                You write the review, we assign a score based on the sentiment of the review.
-            </p>
-            <h2>NEW REVIEW</h2>
-            <form action="/review/" method="post">
-                <div class="form-group">
-                    <label for="album_input">Album: </label>
-                    <input name="album" type="text" class="form-control" id="album_input">
-                </div>
-                <div class="form-group">
-                    <label for="artist_input">Artist:</label>
-                    <input name="artist" type="text" class="form-control" id="artist_input">
-                </div>
-                <div class="form-group">
-                    <label for="review_textarea">Review: </label>
-                    <textarea name="description" class="form-control" id="review_textarea" rows="20"></textarea>
-                </div>
-                <button type="submit">Publish Review</button>
-            </form>
-            <p>
-                <button type="submit">Get Score</button>
-                
-            </p>
-            <p>
-                Score: {{score}}/100
-            </p>
+            <h2>REVIEW</h2> 
+            <p>Album: {{album}}</p>
+            <p>Artist: {{artist}}</p>
+            <p>Score: {{score}}/100</p>
+            <p>Review: {{review}}</p>
         </div>
         <script src="" async defer></script>
         <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
