--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -5,7 +5,7 @@
                 You write the review, we assign a score based on the sentiment of the review.
             </p>
             <h2>NEW REVIEW</h2>
-            <form action="/review/" method="post">
+            <form action="/publish/" method="post">
                 <div class="form-group">
                     <label for="album_input">Album: </label>
                     <input name="album" type="text" class="form-control" id="album_input">
