--- a/app/templates/review.html
+++ b/app/templates/review.html
@@ -2,8 +2,8 @@
 
 {% block body %}
             {% with msg = get_flashed_messages() %}
-                {% if messages %}
-                    {{ messages }}
+                {% if msg %}
+                    {{ msg[0] }}
                 {% endif %}
             {% endwith %}
             <h2>REVIEW</h2> 
