Implemented colour theme

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -11,16 +11,16 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
     </head>
-    <body>
+    <body class="p-3 mb-2 bg-dark text-white">
         <!--[if lt IE 7]>x
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
         <div class="container">
-            <h1>MUSIC SENTIMENT REVIEW</h1>
-            <a type=button href="{{ url_for('index') }}">New Review</a>
+            <h1 class="text-info">MUSIC SENTIMENT REVIEW</h1>
+            <a type=button href="{{ url_for('index') }}" class="btn btn-info">New Review</a>
             <form action="/search" method="get">
                 <div class="form-group">
-                    {{ g.search_form.search(class="form-control", placeholder=g.search_form.search.label.text) }}
+                    {{ g.search_form.search(class="form-control p-3 mb-2 bg-dark text-white", placeholder=g.search_form.search.label.text) }}
                 </div>
                     
             </form>
