--- a/app/templates/search.html
+++ b/app/templates/search.html
@@ -1,16 +1,18 @@
 {% extends "base.html" %}
 
 {% block body %}
-<h2>Search Results</h2>
+<h2 class="text-info">Search Results</h2>
 {% for result in results %}
-<p>
+<p class="p-3 mb-2 bg-info text-white">
     <td>
-        <a href="{{ url_for('show_review', id=result.id) }}">
+        <a href="{{ url_for('show_review', id=result.id) }}" class="btn btn-dark">
             {{ result.artist }} - {{ result.album }}
         </a>
     </td>
-    <td>Score: {{ result.score }}</td>
-    <td>Published: {{ result.date }}</td>
+    <td>
+        Score: {{ result.score }}
+    </td>
+    <td> Published: {{ result.date }}</td>
 </p>
 {% endfor %}
 
