--- a/app/templates/review.html
+++ b/app/templates/review.html
@@ -22,13 +22,13 @@
         </div>
         
         <div
-            class="modal"
+            class="modal fade"
             id="deleteWarning"
             role="dialog"
         >
         <div class="modal-dialog">
             
-                <div class="p-3 mb-2 bg-dark text-white">
+                <div class="modal-content bg-dark text-white">
                     <div class="modal-header">
                         <h5 class="modal-title text-info" id="deleteWarningLabel">Delete Review</h5>
                         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
