update home page, add album page

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,35 +1,26 @@
 {% extends "base.html" %}
 
 {% block body %}
-    {% with msg = get_flashed_messages() %}
-        {% if msg %}
-            <div class="border border-info bg-info text-white">
-                {{ msg[0] }}
-            </div>     
-        {% endif %}
-    {% endwith %}
-            <h2 class="text-info">NEW REVIEW</h2>
-            <p>
-                Score: {{score}}/100
-            </p>
-            <form method="post">
-                <div class="form-group">
-                    <label for="album_input">Album: </label>
-                    <input name="album" type="text" class="form-control p-3 mb-2 bg-secondary text-white" id="album_input" value="{{ album }}">
-                </div>
-                <div class="form-group">
-                    <label for="artist_input">Artist:</label>
-                    <input name="artist" type="text" class="form-control p-3 mb-2 bg-secondary text-white" id="artist_input" value="{{ artist }}">
-                </div>
-                <div class="form-group">
-                    <label for="review_textarea">Review: </label>
-                    <textarea name="description" class="form-control p-3 mb-2 bg-secondary text-white" id="review_textarea" rows="20">{{ description }}</textarea>
-                </div>
-                <p>
-                    Get a score based on the sentiment of your review:
-                </p>
-                <button type="submit" class="btn btn-info" formaction="/">Get Score</button>
-                <button type="submit" class="btn btn-info" formaction="/publish/">Publish Review</button>
-            </form>
-        </div>
+{% with messages = get_flashed_messages() %}
+    {% if messages %}
+        {{ messages[0] }}
+    {% endif %}
+{% endwith %}
+<h2 class="text-info">Trending Albums</h2>
+{% for album in albums %}
+<p class = "border-bottom border-info">
+    <td>
+        <a href="{{ url_for('show_album_detail', id=album.id) }}" class="btn btn-dark">
+            {{ album.artist }} - {{ album.name }}
+        </a>
+    </td>
+    <td>
+        <span class="border border-info bg-info text-white font-weight-bold">
+            {{ scores[album.id] }}/100
+        </span>
+    </td>
+    
+</p>
+{% endfor %}
+
 {% endblock %}
