--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -16,10 +16,14 @@
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
         <div class="container">
-            <h1 class="text-info">MUSIC SENTIMENT REVIEW</h1>
+            <h1 class="text-info">
+                <a type=button href="{{ url_for('index') }}">
+                    MUSIC SENTIMENT REVIEW
+                </a>
+            </h1>
             <nav class="navbar">
                 {% if current_user.is_authenticated %}
-                <a type=button href="{{ url_for('index') }}" class="btn btn-info">New Review</a>
+                <a type=button href="{{ url_for('write_review') }}" class="btn btn-info">New Review</a>
                 {% endif %}
                 {% if not current_user.is_authenticated %}
                 <a type=button href="{{ url_for('signup') }}" class="btn btn-info">Create Account</a>
