--- a/app/templates/review.html
+++ b/app/templates/review.html
@@ -12,7 +12,7 @@
             <p>Artist: {{artist}}</p>
             <p>Score: {{score}}/100</p>
             <p>Review: {{review}}</p>
-            {% if current_user.username == author %}
+            {% if current_user.id == author %}
             <button
                 type="button"
                 data-review-id="{{id}}"
