--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -30,6 +30,7 @@
                 <a type=button href="{{ url_for('login') }}" class="btn btn-info">Login</a>
                 {% endif %}
                 {% if current_user.is_authenticated %}
+                <a type=button href="{{ url_for('profile', id=current_user.id) }}" class="btn btn-info">Profile</a>
                 <a type=button href="{{ url_for('logout') }}" class="btn btn-info">Logout</a>
                 {% endif %}
             </nav>
